# rotix

./: CHANGES  CREDITS  Makefile  README  configure  help.c  help.h  meson.build  meson_options.txt  rot.c  rot.h  rotix.1  rotix.c
po/: NL.po  POTFILES  meson.build  nl.po  rotix.pot
